Refactor the packets managers and add 1.16.2 support
Prefer the Bukkit api for #openBook, #sendTitle
and #sendBlockChange
Catch only exceptions related to reflection
Fix a typo for "floating text"